--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.1",
     "web-vitals": "^2.1.4"
@@ -48,5 +48,4 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47"
   }
-
 }
