--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "antd": "^5.21.5",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
