--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "react-share": "^5.1.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.1",
     "web-vitals": "^2.1.4"
