--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
